--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-setuptools>=65.0.0
-wheel>=0.38.0
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-dotenv==1.0.0
-requests==2.31.0
-PyPDF2==3.0.1
-python-docx==1.1.0
-gunicorn==21.2.0
-google-generativeai==0.3.2
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
-numpy==1.24.3
-pydantic==2.5.0
+setuptools
+wheel
+fastapi
+uvicorn[standard]
+python-dotenv
+requests
+PyPDF2
+python-docx
+gunicorn
+google-generativeai
+sentence-transformers
+faiss-cpu
+numpy
+pydantic
